--- a/02-Homework_05-Matplotlib_Instructions_Pymaceuticals_pymaceuticals_starter.ipynb
+++ b/02-Homework_05-Matplotlib_Instructions_Pymaceuticals_pymaceuticals_starter.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +205,7 @@
        "[1893 rows x 8 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -232,87 +232,332 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1892"
+       "249"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Checking the number of mice.\n",
-    "drop_recurring = study_data.drop_duplicates()\n",
-    "num_mice = drop_recurring.count()[\"Mouse ID\"]\n",
+    "num_mice = study_data[\"Mouse ID\"].nunique()\n",
     "num_mice"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0       False\n",
-       "1       False\n",
-       "2       False\n",
-       "3       False\n",
-       "4       False\n",
-       "        ...  \n",
-       "1888    False\n",
-       "1889    False\n",
-       "1890    False\n",
-       "1891    False\n",
-       "1892    False\n",
-       "Length: 1893, dtype: bool"
+       "array(['g989'], dtype=object)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Getting the duplicate mice by ID number that shows up for Mouse ID and Timepoint. \n",
-    "\n",
-    "duplicate = study_data.duplicated([\"Mouse ID\", \"Timepoint\"])\n",
-    "duplicate"
+    "duplicate = study_data.loc[study_data.duplicated([\"Mouse ID\", \"Timepoint\"]), \"Mouse ID\"].unique()\n",
+    "duplicate\n",
+    "# mouse_id = duplicate.loc[\"Mouse ID\"]\n",
+    "# mouse_id"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>g989</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      0\n",
+       "0  g989"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Optional: Get all the data for the duplicate mouse ID. \n",
-    "\n"
+    "\n",
+    "duplicate_mouse = pd.DataFrame(duplicate)\n",
+    "duplicate_mouse"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Mouse ID</th>\n",
+       "      <th>Drug Regimen</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Age_months</th>\n",
+       "      <th>Weight (g)</th>\n",
+       "      <th>Timepoint</th>\n",
+       "      <th>Tumor Volume (mm3)</th>\n",
+       "      <th>Metastatic Sites</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>k403</td>\n",
+       "      <td>Ramicane</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>21</td>\n",
+       "      <td>16</td>\n",
+       "      <td>0</td>\n",
+       "      <td>45.000000</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>k403</td>\n",
+       "      <td>Ramicane</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>21</td>\n",
+       "      <td>16</td>\n",
+       "      <td>5</td>\n",
+       "      <td>38.825898</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>k403</td>\n",
+       "      <td>Ramicane</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>21</td>\n",
+       "      <td>16</td>\n",
+       "      <td>10</td>\n",
+       "      <td>35.014271</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>k403</td>\n",
+       "      <td>Ramicane</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>21</td>\n",
+       "      <td>16</td>\n",
+       "      <td>15</td>\n",
+       "      <td>34.223992</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>k403</td>\n",
+       "      <td>Ramicane</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>21</td>\n",
+       "      <td>16</td>\n",
+       "      <td>20</td>\n",
+       "      <td>32.997729</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1888</th>\n",
+       "      <td>z969</td>\n",
+       "      <td>Naftisol</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>9</td>\n",
+       "      <td>30</td>\n",
+       "      <td>25</td>\n",
+       "      <td>63.145652</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1889</th>\n",
+       "      <td>z969</td>\n",
+       "      <td>Naftisol</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>9</td>\n",
+       "      <td>30</td>\n",
+       "      <td>30</td>\n",
+       "      <td>65.841013</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1890</th>\n",
+       "      <td>z969</td>\n",
+       "      <td>Naftisol</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>9</td>\n",
+       "      <td>30</td>\n",
+       "      <td>35</td>\n",
+       "      <td>69.176246</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1891</th>\n",
+       "      <td>z969</td>\n",
+       "      <td>Naftisol</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>9</td>\n",
+       "      <td>30</td>\n",
+       "      <td>40</td>\n",
+       "      <td>70.314904</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1892</th>\n",
+       "      <td>z969</td>\n",
+       "      <td>Naftisol</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>9</td>\n",
+       "      <td>30</td>\n",
+       "      <td>45</td>\n",
+       "      <td>73.867845</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1893 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Mouse ID Drug Regimen   Sex  Age_months  Weight (g)  Timepoint  \\\n",
+       "0        k403     Ramicane  Male          21          16          0   \n",
+       "1        k403     Ramicane  Male          21          16          5   \n",
+       "2        k403     Ramicane  Male          21          16         10   \n",
+       "3        k403     Ramicane  Male          21          16         15   \n",
+       "4        k403     Ramicane  Male          21          16         20   \n",
+       "...       ...          ...   ...         ...         ...        ...   \n",
+       "1888     z969     Naftisol  Male           9          30         25   \n",
+       "1889     z969     Naftisol  Male           9          30         30   \n",
+       "1890     z969     Naftisol  Male           9          30         35   \n",
+       "1891     z969     Naftisol  Male           9          30         40   \n",
+       "1892     z969     Naftisol  Male           9          30         45   \n",
+       "\n",
+       "      Tumor Volume (mm3)  Metastatic Sites  \n",
+       "0              45.000000                 0  \n",
+       "1              38.825898                 0  \n",
+       "2              35.014271                 1  \n",
+       "3              34.223992                 1  \n",
+       "4              32.997729                 1  \n",
+       "...                  ...               ...  \n",
+       "1888           63.145652                 2  \n",
+       "1889           65.841013                 3  \n",
+       "1890           69.176246                 4  \n",
+       "1891           70.314904                 4  \n",
+       "1892           73.867845                 4  \n",
+       "\n",
+       "[1893 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Create a clean DataFrame by dropping the duplicate mouse by its ID.\n"
+    "# Create a clean DataFrame by dropping the duplicate mouse by its ID.\n",
+    "# duplicate_mice = study_data.drop_duplicates(subset=[\"Mouse ID\"])\n",
+    "# duplicate_mice_data = pd.DataFrame(duplicate_mice)\n",
+    "# duplicate_mice_data\n",
+    "duplicate_mice = study_data[study_data.isin(duplicate) == False]\n",
+    "duplicate_mice"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1880"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Checking the number of mice in the clean DataFrame.\n"
+    "# Checking the number of mice in the clean DataFrame.\n",
+    "number_mice = duplicate_mice.count()[\"Mouse ID\"]\n",
+    "number_mice"
    ]
   },
   {
@@ -324,12 +569,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 58,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Drug Regimen\n",
+       "Capomulin    0.329346\n",
+       "Ceftamin     0.469821\n",
+       "Infubinol    0.492236\n",
+       "Ketapril     0.603860\n",
+       "Naftisol     0.596466\n",
+       "Placebo      0.581331\n",
+       "Propriva     0.512884\n",
+       "Ramicane     0.320955\n",
+       "Stelasyn     0.573111\n",
+       "Zoniferol    0.516398\n",
+       "Name: Tumor Volume (mm3), dtype: float64"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Generate a summary statistics table of mean, median, variance, standard deviation, and SEM of the tumor volume for each regimen\n",
-    "\n",
+    "drug_regimen = duplicate_mice.groupby([\"Drug Regimen\"])\n",
+    "mean_drug = drug_regimen.mean()[\"Tumor Volume (mm3)\"]\n",
+    "median_drug = drug_regimen.median()[\"Tumor Volume (mm3)\"]\n",
+    "var_drug = drug_regimen.var()[\"Tumor Volume (mm3)\"]\n",
+    "stddev_drug = drug_regimen.std()[\"Tumor Volume (mm3)\"]\n",
+    "sem_drug = drug_regimen.sem()[\"Tumor Volume (mm3)\"]\n",
     "# This method is the most straighforward, creating multiple series and putting them all together at the end.\n",
     "\n"
    ]
