Made changes to code

--- a/02-Homework_05-Matplotlib_Instructions_Pymaceuticals_pymaceuticals_starter.ipynb
+++ b/02-Homework_05-Matplotlib_Instructions_Pymaceuticals_pymaceuticals_starter.ipynb
@@ -1430,25 +1430,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'linregress' is not defined",
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-131-cf9f6be53fbd>, line 11)",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-120-609c87b6d325>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Calculate the correlation coefficient and linear regression model\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;31m# for mouse weight and average tumor volume for the Capomulin regimen\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[1;33m(\u001b[0m\u001b[0mslope\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mintercept\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mrvalue\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mpvalue\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mstderr\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlinregress\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmouse_weight\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maverage_tumor\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'linregress' is not defined"
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-131-cf9f6be53fbd>\"\u001b[1;36m, line \u001b[1;32m11\u001b[0m\n\u001b[1;33m    plt.annotate(line_eq, (6, 10), fontsize=15, color='red')\u001b[0m\n\u001b[1;37m      ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
     "# Calculate the correlation coefficient and linear regression model \n",
     "# for mouse weight and average tumor volume for the Capomulin regimen\n",
-    "(slope, intercept, rvalue, pvalue, stderr) = linregress(mouse_weight, average_tumor)"
+    "plt.scatter(mouse_weight, average_tumor, color='green')\n",
+    "plt.title(\"Mouse Weight Versus Average Tumor Volume (Capomulin)\")\n",
+    "plt.xlabel(\"Mouse Weight\")\n",
+    "plt.ylabel(\"Average Tumor Volume\")\n",
+    "(slope, intercept, rvalue, pvalue, stderr) = st.linregress(mouse_weight, average_tumor)\n",
+    "regress_value = mouse_weight * slope + intercept\n",
+    "plt.plot(mouse_weight, regress_value, 'r-')\n",
+    "line_eq = 'y =' + str(round(slope, 2) + 'x' + str(round(intercept, 2))\n",
+    "plt.annotate(line_eq, (6, 10), fontsize=15, color='red')                     "
    ]
   },
   {
